<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MTG Cards Info</string>
    <string name="app_long_name">MTG Cards Info</string>
    <string name="action_about">About</string>
    <string name="copyright">The information presented on this site about Magic: The Gathering, both literal and graphical, is copyrighted by Wizards of the Coast. This application is not produced, endorsed, supported, or affiliated with Wizards of the Coast.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="email" translatable="false">mtg@danielebottillo.com</string>
    <string name="feedback" translatable="false">Feedback </string>
    <string name="feedback_text">
        <![CDATA[
		| Version: %1$s |<br/>
		| API Level: %2$s |<br/>
		| Device: %3$s |<br/>
		| Model: %4$s |<br/>
		| Product: %5$s |
		<br/>
        <br/>
		]]>
	</string>
    <string name="version">Version</string>
    <string name="action_search">Search</string>
    <string name="search_result">Results:</string>
    <plurals name="search_limit">
        <item quantity="one">There is a limit of %d result,\n what about a more specific search?</item>
        <item quantity="other">There is a limit of %d results,\n what about a more specific search?</item>
    </plurals>
    <string name="minimum_search">Search requires at least one condition</string>
    <string name="add">Add</string>
    <string name="mtg_color_white" translatable="false">W</string>
    <string name="mtg_color_blue" translatable="false">U</string>
    <string name="mtg_color_black" translatable="false">B</string>
    <string name="mtg_color_red" translatable="false">R</string>
    <string name="mtg_color_green" translatable="false">G</string>
    <string name="mtg_type_artifact">Artifact</string>
    <string name="mtg_type_land">Land</string>
    <string name="mtg_common">Co</string>
    <string name="mtg_uncommon">U</string>
    <string name="mtg_rare">R</string>
    <string name="mtg_mythic_rare">M</string>
    <string name="share">Share</string>
    <string name="favourite_add_long">Add to favourites</string>
    <string name="favourite_remove">Remove</string>
    <string name="favourite_add">Save</string>
    <string name="action_saved">Favourites</string>
    <string name="action_home">Sets</string>
    <string name="action_create_db" translatable="false">Create db</string>
    <string name="action_fill_decks" translatable="false">Create random decks</string>
    <string name="action_create_fav" translatable="false">Add random favourites</string>
    <string name="refresh">Refresh</string>
    <string name="action_life_counter">Life Counter</string>
    <string name="plus_one" translatable="false">+</string>
    <string name="minus_one" translatable="false">-</string>
    <string name="plus_five" translatable="false">+5</string>
    <string name="minus_five" translatable="false">-5</string>
    <string name="maximum_player">You\'ve reached the maximum number of players</string>
    <string name="edit_player">Edit name player</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="life_reset">Reset</string>
    <string name="life_dice">Roll dice</string>
    <string name="menu_life_poison">Poison count</string>
    <string name="empty_saved">You don\'t have any favourite cards yet, use the star button on the card page to add it as a favourite.</string>
    <string name="empty_search">No cards found, why don\'t you try something else??</string>
    <string name="empty_deck">No cards found in this deck, use Sets section or search to find cards to add.</string>
    <string name="error_load_image">Impossible to load the image at the moment</string>
    <string name="image_retry">Load image</string>
    <string name="price_error">Error retrieving price</string>
    <string name="add_to_deck_title">Add %1$s to deck</string>
    <string name="add_one_to_deck">Add 1 to deck</string>
    <string name="menu_image">Show image</string>
    <string name="action_crash">Force crash</string>
    <string name="menu_fullscreen_image" translatable="false">Full screen</string>
    <string name="action_lucky">I feel lucky</string>
    <string name="lucky_title">Lucky?</string>
    <string name="menu_life_screen_on">Keep screen on</string>
    <string name="menu_life_two_hg">2HG game</string>
    <string name="pick_sort_option">Sorting cards</string>
    <string name="action_rate">Rate the app</string>
    <string name="share_app">Share App</string>
    <string name="libraries">Libraries</string>
    <string name="action_decks">Decks</string>
    <string name="new_deck_hint">Insert name deck</string>
    <string name="Save">Save</string>
    <string name="sideboard" translatable="false">Sideboard</string>
    <string name="deck_header_creatures">Creatures</string>
    <string name="deck_header_instant_sorceries">Instant and Sorceries</string>
    <string name="deck_header_other">Other</string>
    <string name="deck_header_lands">Lands</string>
    <string name="deck_header_sideboard">Sideboard</string>
    <string name="action_add_one_more">Add one more</string>
    <string name="action_remove_one">Remove one</string>
    <string name="action_remove_all">Remove all</string>
    <string name="action_move_one">Move one</string>
    <string name="action_move_all">Move all</string>
    <string name="deck_title">Deck</string>
    <string name="deck_subtitle" tools:ignore="PluralsCandidate">%d cards</string>
    <string name="deck_delete_title">Delete deck</string>
    <string name="deck_delete_text">This deck is not empty. Are you sure?</string>
    <string name="deck_delete_confirmation">Delete</string>
    <string name="new_deck_quantity_hint">How many (max 30)</string>
    <string name="deck_choose">Choose deck</string>
    <string name="deck_choose_quantity">Choose quantity</string>
    <string name="deck_new">New deck</string>
    <string name="deck_specify">Specify</string>
    <string name="release_note_title_push">What\'s new in %s</string>
    <string name="release_note_text">
        -NEW: Unstable\n-NEW: Explorers of Ixalan
    </string>
    <string name="release_note_text_full">
        <b>Version 3.2.3:</b> \n
        - NEW: Unstable\n
        - NEW: Explorers of Ixalan\n
        - Fix crash on widget\n
        - Fix bug of deck with 0 quantity cards\n\n
        <b>Version 3.2.2:</b> \n
        - bug fixes\n\n
        <b>Version 3.2.1:</b> \n
        - bug fixes\n\n
        <b>Version 3.2.0:</b> \n
        - NEW: Duel Decks: Merfolk vs. Goblins\n
        - NEW: Iconic Masters\n
        - Advanced search for CMC, power and toughness\n\n
        <b>Version 3.1.4:</b> \n
        - search for Standard updated\n
        - show legalities\n\n
        <b>Version 3.1.2:</b> \n
        - NEW: Ixalan\n\n
        <b>Version 3.1.1:</b> \n
        - Restored card images\n\n
        <b>Version 3.1.0:</b> \n
        - Bug fixes\n\n
        <b>Version 3.0.0:</b> \n
        - Revamped UI\n\n
        <b>Version 2.8.4:</b> \n
        - NEW: Hour of Devastation\n\n
        <b>Version 2.8.3:</b> \n
        - NEW: Amonkhet\n
        - NEW: Duel Decks: Mind vs. Might\n\n
        <b>Version 2.8.2:</b> \n
        - NEW: Modern Masters 2017 Edition\n\n
        <b>Version 2.8.1:</b> \n
        - NEW: Planechase Anthology\n
        - NEW: Aether Revolt\n\n
        <b>Version 2.8.0:</b> \n
        - NEW: Split and double-side cards support\n\n
        <b>Version 2.7.9:</b> \n
        - NEW: Commander 2016\n
        - NEW: Move cards between deck and sideboard\n
        - Bug fixes \n\n
        <b>Version 2.7.8:</b> \n
        - NEW: Kaladesh\n
        - NEW: Kaladesh Inventions \n\n
        <b>Version 2.7.6:</b> \n
        - NEW: Deck fixes \n
        - NEW: Land option in Search \n\n
        <b>Version 2.7.5:</b> \n
        - NEW: Eldritch Moon \n
        - NEW: Eternal Masters \n
        - NEW: Grid option view \n
        - NEW: Import deck (.dec format) \n
        - NEW: Duel Decks: Zendikar vs. Eldrazi \n\n
        <b>Version 2.7.4:</b> \n
        - NEW: Shadows over Innistrad \n
        - NEW: Duel Decks: Blessed vs. Cursed \n
        - Fix search issue with multicolor \n\n
        <b>Version 2.7.3:</b> \n
        - NEW: Oath of the gatewatch \n
        - NEW: Export deck \n
        - NEW: Rename deck \n
        - Fix major issue on One Plus Two \n
        - Bug fixes \n\n
        <b>Version 2.7.2:</b> \n
        - NEW: Advanced Search now includes card text (you can search for lifelink, vigilance, …) \n
        - NEW: Filter added to favourites \n
        - On the first start, favourites will migrate to a new system \n\n
        <b>Version 2.7:</b> \n
        - NEW: Advanced Search, you can search card name, types, color, sets and rarity \n
        - NEW: Filter Eldrazi cards \n\n
        <b>Version 2.6:</b> \n
        - NEW: Commander 2015 \n
        - NEW: Rulings added to card detail \n
        - FIX: Bug with multiple same cards in a deck
    </string>
    <string name="action_release_note">Release Note</string>
    <string name="empty_cards">No cards available with the current filters.</string>
    <string name="empty_decks">You don\'t have any decks yet!</string>
    <string name="share_card">Share card</string>
    <string name="row_card_name" translatable="false">%1$s%2$s</string>
    <string name="row_life_counter_name" translatable="false">%1$s - %2$d/20</string>
    <string name="card_detail_type">Type</string>
    <string name="card_detail_pt">P/T</string>
    <string name="card_detail_mana">Mana cost</string>
    <string name="card_detail_set">Set</string>
    <string name="card_detail_original_text">Original text</string>
    <string name="card_detail_rulings">Rulings</string>
    <string name="card_detail_legalities">Legalities</string>
    <string name="search_hint_name">Insert any part of the name</string>
    <string name="search_hint_type">Insert any type or subtype</string>
    <string name="search_hint_text">Insert any word of the text</string>
    <string name="search_power_title">P</string>
    <string name="search_toughness_title">T</string>
    <string name="search_cmc_title">Mana cost converted</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="multicolor">Only multicolor</string>
    <string name="no_multi">No multicolor</string>
    <string name="search_common">Common</string>
    <string name="search_uncommon">Uncommon</string>
    <string name="search_mythic">Mythic</string>
    <string name="search_rare">Rare</string>
    <string name="search_set_all">All</string>
    <string name="search_set_standard">Standard</string>
    <string name="search_color_title">Colors</string>
    <string name="search_rarity_title">Rarity</string>
    <string name="search_card_title">Card Name</string>
    <string name="search_card_types">Card Types</string>
    <string name="search_set_title">Set</string>
    <string name="search_hint_numbers" translatable="false">X,0,1…</string>
    <string name="search_cmc_numbers" translatable="false">X,0,1,W…</string>
    <string name="mtg_type_eldrazi" translatable="false">Eldrazi</string>
    <string name="search_card_text">Card text</string>
    <string name="action_send_db">Copy db to sdcard</string>
    <string name="action_copy_db">Replace db from sdcard</string>
    <string name="export">Export</string>
    <string name="action_join_beta">Join Beta</string>
    <string name="main_fragment_tooltip">NEW: you can now switch between list and grid!</string>
    <string name="sort_az">Alphabetically</string>
    <string name="sort_color">WUBRG</string>
    <string name="join_telegram">Join Telegram help group</string>
    <string name="cd_close">Close</string>
    <string name="cd_tooltip_arrow">Close tooltip</string>
</resources>