<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/more_rate"
        android:icon="@drawable/left_rate"
        android:orderInCategory="401"
        android:title="@string/action_rate" />
    <item
        android:id="@+id/more_beta"
        android:icon="@drawable/left_beta"
        android:orderInCategory="402"
        android:title="@string/action_join_beta" />
    <item
        android:id="@+id/more_release_note"
        android:icon="@drawable/left_release_note"
        android:orderInCategory="403"
        android:title="@string/action_release_note" />
    <item
        android:id="@+id/more_about"
        android:icon="@drawable/left_info"
        android:orderInCategory="404"
        android:title="@string/action_about" />
</menu>