<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_panel_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/white">

    <ToggleButton
        android:id="@+id/toggle_white"
        android:layout_width="@dimen/filter_toggle_size"
        android:layout_height="@dimen/filter_toggle_size"
        android:layout_toLeftOf="@+id/toggle_blue"
        android:textColor="@drawable/toggle_text_color"
        tools:checked="true"
        android:textOff="@string/mtg_color_white"
        android:textOn="@string/mtg_color_white"/>

    <ToggleButton
        android:id="@id/toggle_blue"
        android:layout_width="@dimen/filter_toggle_size"
        android:layout_height="@dimen/filter_toggle_size"
        android:layout_toLeftOf="@+id/toggle_black"
        android:textColor="@drawable/toggle_text_color"
        android:textOff="@string/mtg_color_blue"
        android:textOn="@string/mtg_color_blue"/>

    <ToggleButton
        android:id="@+id/toggle_black"
        android:layout_width="@dimen/filter_toggle_size"
        android:layout_height="@dimen/filter_toggle_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@drawable/toggle_text_color"
        android:textOff="@string/mtg_color_black"
        android:textOn="@string/mtg_color_black"/>

    <ToggleButton
        android:id="@+id/toggle_red"
        android:layout_width="@dimen/filter_toggle_size"
        android:layout_height="@dimen/filter_toggle_size"
        android:layout_toRightOf="@+id/toggle_black"
        android:textColor="@drawable/toggle_text_color"
        android:textOff="@string/mtg_color_red"
        android:textOn="@string/mtg_color_red"/>

    <ToggleButton
        android:id="@+id/toggle_green"
        android:layout_width="@dimen/filter_toggle_size"
        android:layout_height="@dimen/filter_toggle_size"
        android:layout_toRightOf="@id/toggle_red"
        android:textColor="@drawable/toggle_text_color"
        android:textOff="@string/mtg_color_green"
        android:textOn="@string/mtg_color_green"/>

    <LinearLayout
        android:id="@+id/filter_artifact_land"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggle_white"
        android:layout_alignRight="@+id/toggle_green"
        android:layout_below="@+id/toggle_black"
        tools:ignore="UnusedIds">

        <ToggleButton
            android:id="@+id/toggle_artifact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/mtg_type_artifact"
            android:textOn="@string/mtg_type_artifact"/>

        <ToggleButton
            android:id="@+id/toggle_land"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/mtg_type_land"
            android:textOn="@string/mtg_type_land"/>

        <ToggleButton
            android:id="@+id/toggle_eldrazi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/mtg_type_eldrazi"
            android:textOn="@string/mtg_type_eldrazi"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggle_white"
        android:layout_alignRight="@+id/toggle_green"
        android:layout_below="@+id/filter_artifact_land"
        android:weightSum="4">

        <ToggleButton
            android:id="@+id/toggle_common"
            android:layout_width="0dp"
            android:layout_height="@dimen/filter_toggle_size"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/mtg_common"
            android:textOn="@string/mtg_common"/>

        <ToggleButton
            android:id="@+id/toggle_uncommon"
            android:layout_width="0dp"
            android:layout_height="@dimen/filter_toggle_size"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/mtg_uncommon"
            android:textOn="@string/mtg_uncommon"/>

        <ToggleButton
            android:id="@+id/toggle_rare"
            android:layout_width="0dp"
            android:layout_height="@dimen/filter_toggle_size"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/mtg_rare"
            android:textOn="@string/mtg_rare"/>

        <ToggleButton
            android:id="@+id/toggle_myhtic"
            android:layout_width="0dp"
            android:layout_height="@dimen/filter_toggle_size"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/mtg_mythic_rare"
            android:textOn="@string/mtg_mythic_rare"/>

    </LinearLayout>

</RelativeLayout>