<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".mtgsearch.base.MainActivity">

    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ab_star"
        android:orderInCategory="101"
        android:title="@string/favourite_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_fullscreen_image"
        android:icon="@drawable/ic_fullscreen"
        android:orderInCategory="102"
        android:title="@string/menu_fullscreen_image"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="103"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share_artwork"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="104"
        android:title="@string/share_artwork"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_image"
        android:checkable="true"
        android:icon="@null"
        android:orderInCategory="105"
        android:title="@string/menu_image"
        app:showAsAction="never"/>
</menu>
