<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mtgsearch.base.MainActivity">

    <item
        android:id="@+id/action_poison"
        android:icon="@null"
        android:title="@string/menu_life_poison"
        android:orderInCategory="102"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_screen_on"
        android:icon="@null"
        android:title="@string/menu_life_screen_on"
        android:orderInCategory="103"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_two_hg"
        android:icon="@null"
        android:title="@string/menu_life_two_hg"
        android:orderInCategory="104"
        android:checkable="true"
        app:showAsAction="never" />

</menu>
